--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#gallery">Gallery</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="assets/docs/cv.pdf" target="_blank" rel="noopener noreferrer">CV</a></li>
+                    <li><a href="home_page/assets/docs/cv.pdf" target="_blank" rel="noopener noreferrer">CV</a></li>
                     <li><a href="text-analyser/index.html" target="_blank" rel="noopener noreferrer">Text
                             Analyzer</a></li>
                 </ul>
