--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Naman Aggarwal's Personal Website</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="home_page/styles.css">
+<!--     <link rel="stylesheet" href="home_page/styles.css"> -->
 </head>
 
 <body>
